// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`updateFilter should update filters 1`] = `
Object {
  "filters": Array [
    Object {
      "field": "y",
      "operator": "eq",
      "value": 2,
    },
    Object {
      "field": "z",
      "operator": "eq",
      "value": 2,
    },
    Object {
      "field": "b",
      "operator": "eq",
      "value": "xyz",
    },
  ],
  "logic": "and",
}
`;

exports[`updateFilter should update subFilters 1`] = `
Object {
  "filters": Array [
    Object {
      "field": "y",
      "operator": "eq",
      "value": 2,
    },
    Object {
      "field": "z",
      "operator": "eq",
      "value": 2,
    },
    Object {
      "filters": Array [
        Object {
          "field": "a",
          "operator": "eq",
          "value": 2,
        },
        Object {
          "field": "b",
          "operator": "eq",
          "value": 2,
        },
      ],
      "logic": "and",
    },
  ],
  "logic": "and",
}
`;
